2) libevent: up to 2.0.22 version.<br>
3) openssl up to 0.9.8ze version.<br>
4) nvram: add VHT parametrs for AC module.<br>
5) igmpproxy: optimize retry timeouts.<br>
6) init.d/goahead: add select mode 2.4GHz/5GHz for mbssid/apcli/wds extensions.<br>
7) goahead: boost ipaddress buffer size.<br>
8) goahead: tune default parametrs (increase preallocated bufferss and others).<br>
9) goahead: webui: add allow acess to lan from internet by ipv6 option.<br>
10) goahead: webui: rearrange some parametrs (more consistent).<br>
11) goahead: fix apply netfilter rules in some situations.<br>
12) goahead: fix redirect submit-url issue (may be crash or not correct redirects).<br>
13) goahead: fix selected STA disconnect for dual band in connected client list.<br>
14) goahead: fix green ap mode in WebUI.<br>
15) goahead: fix channel autoselect for 5GHz.<br>
16) goahead: add support AC modes in connected client list.<br>
17) goahead: add band 2.4/5GHz highlighting in connected client list.<br>
18) goahead: add 5GHz band network mode/name parametrs.<br>
19) goahead: add 5GHz band network central channel parametr.<br>
20) goahead: add VHT mode parametrs for AC module in WebUI.<br>
21) kernel: ralink arch: add support SD/MMC driver for MT7620/MT7621/MT7628.<br>
22) kernel: net: skb_share_check() should use consume_skb().<br>
23) kernel: mips: irq: fix disable_irq on CPU IRQs.<br>
24) kernel: mips: fix restart of indirect syscalls.<br>
25) kernel: mips: fix kernel lockup or crash after CPU offline/online.<br>
26) kernel: mips: remove race window in page fault handling.<br>
<br>
<br>
<b>2.3.x</b><br>
1) kernel: up to 3.4.106 version.<br>
2) kernel: allow MIPS_CPU_SCACHE to be used with different line sizes.<br>
3) dropbear: up to 2015.67 version.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>