@@ -511,7 +511,8 @@
 <b>2.3.x</b><br>
 1) kernel: up to 3.4.106 version.<br>
 2) kernel: allow MIPS_CPU_SCACHE to be used with different line sizes.<br>
-3) dropbear: up to 2015.67 version.<br>
+3) kernel: mips: smp-mt,smp-cmp: Enable all HW IRQs on secondary CPUs.<br>
+4) dropbear: up to 2015.67 version.<br>
 <br>
 <br>
 <b>TODO:</b><br>
